style.css
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap');

*, 
*::before, 
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, 
body {
    font-family: 'Work Sans', sans-serif;
    font-weight: 300;
    overflow: hidden;
}

.wrapper {
    display: flex;
    height: 100vh;
    width: 100vw;
}

.nav-icon {
    background-color: #000;
    color: #fff;
    display: flex;
    justify-content: center;
    z-index: 10;
}

.nav-icon ion-icon {
    font-size: 35px;
    margin: 20px 10px;
    cursor: pointer;
}

.grid-layout {
    flex-wrap: wrap;
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 1fr 1fr;
}

.grid {
    padding: 30px;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.grid h3 {
    font-size: 1.5rem;
    font-weight: 300;
    margin-bottom: 30px;
    letter-spacing: 1.5px;
}

.grid div > span {
    font-size: 1rem;
    justify-content: center;
    text-transform: uppercase;
}

.grid.active p {
    width: 100%;
}

.grid.active span {
    display: flex;
}

.grid.active .lrg-number {
    font-size: 6.5rem;
    margin: 0px 10px 10px 0;
    letter-spacing: 2px;
}

.grid-one {
    grid-area: one / one / one / one;
    background-color: #FC5A2A;
}

.grid-two {
    background-color:#FA9BBE;
    grid-area: two / two / two / two;
}

.grid-three {
    background-color: #93D0AC;
    grid-area: three / three / three / three;
}

.grid-four { 
    background-color: #FFB611;
    grid-area: four / four / four / four;
}

.grid-five {
    background-color: #8965DD;
    grid-area: five / five / five / five;
}

.grid.box h3 {
    width: 50%;
}

.grid.box .days {
    font-size: 3.5rem;
}

.grid.box .days > span {
    margin-left: 10px;
}

.grid .stage {
    color: #000;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    width: 100%;
    height: 100%;
}

.grid .stage .stage-date-wrapper {
    width: 100%;
    display: flex;
    align-items: center;
}

.grid .stage .stage-date-wrapper .stage-date {
    margin-right: auto;
    text-transform: uppercase;
}

.grid .stage .stage-date-wrapper .stage-text {
    font-size: 1rem;
    text-transform: uppercase;
}

.grid .stage .stage-date-wrapper .stage-number {
    margin-left: 5px;
    font-size: 3rem;
    display: flex;
    align-items: center;
}

.modal {
    width: 100%;
    height: 100%;
    background-color: #000;
    color: #fff;
    display: flex;
    visibility: hidden;
    position: fixed;
    top: 0;
    left: 0;
    opacity: 0;
    z-index: 20;
    transition: opacity 0.4s ease;
}

.modal.open {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.4s ease;
}

.modal .close-icon {
    background-color: #8A65DD;
    color: #fff;
    display: flex;
    justify-content: center;
    z-index: 10;
}

.modal .close-icon  ion-icon {
    font-size: 35px;
    margin: 20px 10px;
    cursor: pointer;
}

.modal .modal-content {
    padding: 50px;
    width: 50%;
}

.modal-content h2 {
    font-size: 2rem;
    font-weight: 400;
    margin-bottom: 30px;
   
}

.modal-content h4 {
    font-size: 2.2rem;
    font-weight: 300;
    color: #8A65DD;
    margin-bottom: 40px;
}

.modal-content p {
    margin: 40px 0;
    font-size: 1.2rem;
}

.modal-content a {
    color: #8A65DD;
    text-decoration: none;
}

.modal-content a:focus {
    outline: none;
}

.modal-content a:hover,
.modal-content a:visited {
    color: #8A65DD;
}

.modal-content .github-logo {
    font-size: 40px;
    padding-bottom: 100px;
}

@media screen and (max-width: 990px) {

    html,   
    body {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
}
    .wrapper {
        display: flow-root;
        height: auto;
    }
    .nav-icon {
        justify-content: flex-start;
        align-items: center;
    }

    .nav-icon ion-icon {
        padding-left: 0;
        margin: 20px;
    }

    .grid-layout {
        display: inline-block;
        width: 100%;
    }

    .grid.active .lrg-number {
        font-size: 4.2rem;
    }

    .grid h3 {
        font-size: 1.1rem;
        font-weight: 400;
        margin-bottom: 1px;
        width: 70%;
    }

    .grid .stage {
        right: 10px;
        bottom: 10px;
    }

    .grid.box h3 {
        width: 100%;
    }

    .grid.active span {
        margin-bottom: 20px;
    }
    
    .grid .stage .stage-text {
        font-size: 0.8rem;
        text-transform: uppercase;
    }

    .modal {
        overflow-y: auto;
        -webkit-overflow-scrolling: touch;
        height: auto;
    }
    
    .modal .modal-content {
        width: 90%;
    }

    .modal .close-icon  ion-icon {
        margin: 20px 0;
    }

}

@media screen and (max-width: 520px) {

    .modal-content h2 {
        font-size: 1.5rem;
    }

    .modal-content h4 {
        font-size: 1.8rem;
    }
   
}

@media screen and (max-width: 440px) {

    .grid.active .lrg-number {
        font-size: 3.5rem;
    }

    .modal-content h2 {
        font-size: 1rem;
    }

    .modal-content h4 {
        font-size: 1.3rem;
    }

    .modal-content p {
        font-size: 1.1rem;
    }
   
}

@media screen and (max-width: 280px) {

    .grid h3 {
        font-size: 1rem;
        width: 100%;
        margin-bottom: 20px;
    }

    .grid.box h3 {
        width: 100%;
    }

    .grid.active .lrg-number {
        font-size: 1.5rem;
    }
    
    .grid .stage .stage-text {
        font-size: 0.8rem;
    }
    
    .grid .stage .stage-number {
        font-size: 2rem;
    }
     
    .modal-content h2 {
        font-size: 1rem;
    }

    .modal-content h4 {
        font-size: 1.3rem;
    }

    .modal-content p {
        font-size: 1.1rem;
    }
   
}

